feat(sprint-05): concluir Frente 3 — Features Portal do Cliente (12/12 backend)
## Sprint 5 — Frente 3: Features do Portal do Cliente

### Features Entregues (4/4)
- F04-01: Login e Autenticação (Keycloak OIDC + forgot/reset password)
- F04-02: Onboarding Guiado (4 passos, máquina de estados, Tenant→ACTIVE)
- F04-03: Dashboard do Cliente (cards: unidades, produtos, plano)
- F04-04: App Switcher (GET /auth/me, claims modules[] + business_unit_ids[])

### Entregáveis
- 20 novos arquivos Java (services, controllers, DTOs)
- 8 novos endpoints REST (total: 26)
- Migration V008: onboarding_step no tenant
- Keycloak realm-config.json (4 roles, 3 client scopes)
- 14 novos testes (7 unit OnboardingService + 2 DashboardClient + 2 OnboardingController + 1 integração)
- 4 correções de segurança (URL injection, URL encoding, IDOR → token Caffeine)

### Métricas
- Build: ✅ SUCCESS
- Testes: 227 (0 failures, 1 pre-existing error)
- Progresso Sprint 5: 36/40 (90%)
- Progresso Total: 117/167 (70%)

### Artefatos
- SPRINT-DEVELOPMENT-PLANNING-Frente-3.md
- SPRINT-TEST-PLANNING-Frente-3.md
- SPRINT-CODE-REVIEW-Frente-3.md
- SPRINT-5-EXECUTION-REPORT-Frente-3.md

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>